+ 项目底层框架 + 文件管理器 =+增加对文件处理的功能 =+增加了自动刷新功能 =+添加了很多的BUG =*修改了刷新节点功能 # 修复了若干BUG